# reactor-cloud

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
crates/reactor-ai/: Cargo.toml
crates/reactor-ai-server/: Cargo.toml
crates/reactor-ai-server/src/: doctor.rs  main.rs
crates/reactor-ai/src/: config.rs  error.rs  lib.rs  middleware.rs  router.rs  state.rs
crates/reactor-analytics/: Cargo.toml  README.md
crates/reactor-analytics-server/: Cargo.toml
crates/reactor-analytics-server/src/: main.rs
crates/reactor-analytics/migrations/: 001_metadata.sql  002_events.sql  003_policies.sql  004_erasure.sql  005_audit.sql
crates/reactor-analytics/src/: audit.rs  client.rs  config.rs  error.rs  lib.rs  observability.rs  router.rs  state.rs
crates/reactor-auth/: Cargo.toml
crates/reactor-auth-server/: Cargo.toml
crates/reactor-auth-server/src/: main.rs
crates/reactor-auth/migrations/: 001_users.sql  002_orgs_roles.sql  003_sessions_tokens.sql  004_signing_keys.sql  005_email_oauth_mfa.sql  006_audit.sql  007_invitations.sql  008_verification_tokens.sql  009_api_keys.sql  010_platform_ops.sql
crates/reactor-auth/src/: config.rs  crypto.rs  error.rs  extract.rs  lib.rs  password.rs  router.rs  service.rs  state.rs  tenant.rs
crates/reactor-cache/: Cargo.toml
crates/reactor-cache/src/: backend.rs  error.rs  kv.rs  leader.rs  lib.rs  postgres.rs  queue.rs
crates/reactor-cache/tests/: postgres_integration.rs
crates/reactor-cli/: AGENTS.md  Cargo.toml  README.md
crates/reactor-cli/src/: bundle.rs  cloudflare.rs  context.rs  error.rs  lib.rs  main.rs  project.rs
crates/reactor-cli/tests/: cli_integration.rs
crates/reactor-client/: Cargo.toml
crates/reactor-client/src/: admin.rs  ai.rs  auth.rs  cloud.rs  connect.rs  data.rs  error.rs  functions.rs  http.rs  jobs.rs  lib.rs  sites.rs  storage.rs
crates/reactor-cloud-api/: Cargo.toml  LICENSE
crates/reactor-cloud-api/migrations/: 001_reactor_cloud_schema.sql
crates/reactor-cloud-api/src/: audit.rs  error.rs  keys.rs  lib.rs  members.rs  projects.rs  store.rs  test_utils.rs  types.rs
crates/reactor-connect/: Cargo.toml
crates/reactor-connect-server/: Cargo.toml
crates/reactor-connect-server/src/: doctor.rs  main.rs
crates/reactor-connect/manifests/: README.md  airtable.yaml  chargebee.yaml  freshdesk.yaml  hubspot.yaml  intercom.yaml  mailchimp.yaml  notion.yaml  pipedrive.yaml  zendesk.yaml
crates/reactor-connect/migrations/: 001_all.sql  008_drift_events.sql  009_conflict_policies.sql  010_connection_pairs.sql
crates/reactor-connect/scripts/: audit_manifest_licenses.sh
crates/reactor-connect/src/: config.rs  error.rs  lib.rs  router.rs  service.rs  state.rs
crates/reactor-connect/tests/: connector_smoke.rs  crm_migration_e2e.rs  store_integration.rs
crates/reactor-core/: Cargo.toml
crates/reactor-core/src/: error.rs  id.rs  lib.rs  project.rs  tenant.rs
crates/reactor-data/: Cargo.toml  README.md
crates/reactor-data-server/: Cargo.toml
crates/reactor-data-server/src/: doctor.rs  main.rs
crates/reactor-data/migrations/: 001_metadata.sql  002_policies.sql  003_audit.sql
crates/reactor-data/src/: audit.rs  config.rs  error.rs  lib.rs  router.rs  state.rs
crates/reactor-data/tests/: auth_integration.rs  crud_test.rs  e2e_account_data.rs
crates/reactor-deploy-bundle/: Cargo.toml
crates/reactor-deploy-bundle/src/: error.rs  lib.rs  manifest.rs  pack.rs  unpack.rs  validate.rs
crates/reactor-deploy-bundle/tests/: bundle_tests.rs
crates/reactor-dev-bundle-builder/: Cargo.toml
crates/reactor-dev-bundle-builder/src/: main.rs
crates/reactor-functions/: Cargo.toml  README.md
crates/reactor-functions-server/: Cargo.toml
crates/reactor-functions-server/src/: doctor.rs  main.rs
crates/reactor-functions/migrations/: 001_metadata.sql  002_deployments.sql  003_env.sql  004_policies.sql  005_invocations.sql  006_audit.sql
crates/reactor-functions/src/: audit.rs  config.rs  error.rs  lib.rs  router.rs  state.rs
crates/reactor-functions/tests/: harness.rs
crates/reactor-gateway/: Cargo.toml
crates/reactor-gateway-server/: Cargo.toml
crates/reactor-gateway-server/src/: main.rs
crates/reactor-gateway/migrations/: 001_gateway_schema.sql
crates/reactor-gateway/src/: caddy_admin.rs  error.rs  lib.rs  on_demand_tls.rs  routing.rs  snapshot.rs  sync.rs
crates/reactor-gateway/tests/: caddy_config.rs
crates/reactor-jobs/: Cargo.toml  README.md
crates/reactor-jobs-server/: Cargo.toml
crates/reactor-jobs-server/src/: doctor.rs  main.rs
crates/reactor-jobs/migrations/: 001_all.sql
crates/reactor-jobs/src/: audit.rs  config.rs  error.rs  lib.rs  router.rs  state.rs
crates/reactor-jobs/tests/: store_integration.rs
crates/reactor-ops/: Cargo.toml  LICENSE
crates/reactor-ops/src/: audit.rs  config.rs  error.rs  lib.rs  middleware.rs  router.rs  state.rs
crates/reactor-policy/: Cargo.toml
crates/reactor-policy/src/: ast.rs  builtins.rs  compile.rs  context.rs  eval.rs  grammar.rs  lib.rs  scope.rs
crates/reactor-server/: Cargo.toml  README.md
crates/reactor-server/examples/: Reactor.toml
crates/reactor-server/src/: config.rs  error.rs  lib.rs  main.rs  tenant_cache.rs
crates/reactor-server/tests/: load_tests.rs  nats_tests.rs  tenant_isolation.rs
crates/reactor-sites/: Cargo.toml  README.md
crates/reactor-sites-server/: Cargo.toml
crates/reactor-sites-server/src/: doctor.rs  main.rs
crates/reactor-sites/migrations/: 001_metadata.sql  002_routes.sql  003_domains.sql  004_policies.sql  005_isr.sql  006_audit.sql
crates/reactor-sites/src/: audit.rs  config.rs  error.rs  lib.rs  router.rs  state.rs
crates/reactor-sites/tests/: harness.rs
studio/: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
studio/apps/studio/: index.html  package.json  tailwind.config.js  vite.config.ts
studio/crates/studio-agent/: Cargo.toml
studio/crates/studio-devserver/: Cargo.toml
studio/crates/studio-eval/: Cargo.toml
(+1409 files in other folders)
