[workspace]
resolver = "2"
members = [
    "apps/studio/src-tauri",
    "crates/studio-protocol",
    "crates/studio-providers",
    "crates/studio-storage",
    "crates/studio-memory",
    "crates/studio-tools",
    "crates/studio-agent",
    "crates/studio-plan",
    "crates/studio-task",
    "crates/studio-devserver",
    "crates/studio-tracing",
    # Foundry crates
    "crates/studio-lessons",
    "crates/studio-eval",
    "crates/studio-postmortem",
    "crates/studio-promotion",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/atomico-labs/reactor"

[workspace.dependencies]
# Shared dependencies across studio crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
regex = "1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
