[package]
name = "reactor-ai-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactor AI standalone server"

[[bin]]
name = "reactor-ai-server"
path = "src/main.rs"

[features]
default = ["openrouter"]
openrouter = ["reactor-ai/openrouter"]
bedrock = ["reactor-ai/bedrock"]
foundry = ["reactor-ai/foundry"]
openai-compatible = ["reactor-ai/openai-compatible"]

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-auth.workspace = true
reactor-ai.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true

# Error handling
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Database
sqlx.workspace = true

# Config
figment.workspace = true
