[package]
name = "reactor-ai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactor AI capability — OpenAI-compatible LLM gateway with multi-provider dispatch"

[features]
default = ["openrouter"]
bedrock = ["aws-sigv4", "aws-credential-types", "aws-smithy-runtime-api", "http", "http-body-util"]
openrouter = []
foundry = []
openai-compatible = []

[dependencies]
# Workspace crates
reactor-core.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# IDs and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# Byte buffers
bytes.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["stream"] }

# SSE parsing for streaming responses
reqwest-eventsource = "0.6"
async-stream = "0.3"

# Config
figment.workspace = true

# OpenAPI
utoipa.workspace = true

# AWS SigV4 signing (optional, for Bedrock)
aws-sigv4 = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
aws-smithy-runtime-api = { version = "1", optional = true }
http = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber.workspace = true
