[package]
name = "reactor-analytics-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactor Analytics server binary"

[[bin]]
name = "reactor-analytics-server"
path = "src/main.rs"

[features]
default = []

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-analytics.workspace = true
reactor-auth.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Error handling
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client (for RemoteAuthClient)
reqwest.workspace = true

# Config
figment.workspace = true

# CLI
clap.workspace = true
