[package]
name = "reactor-auth"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and identity management for Reactor.cloud"

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-vault = { workspace = true }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# IDs and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Observability
tracing.workspace = true

# JWT and crypto
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
rand_core.workspace = true
subtle.workspace = true
aes-gcm.workspace = true
base64.workspace = true
sha2.workspace = true
rsa.workspace = true

# HTTP client (for RemoteAuthClient)
url.workspace = true
reqwest.workspace = true

# Async utilities
async-trait.workspace = true

# Validation
validator.workspace = true

# Email
lettre.workspace = true

# OpenAPI
utoipa.workspace = true

# Config
figment.workspace = true

# WebAuthn / Passkeys
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
serde_urlencoded = "0.7.1"

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
