[package]
name = "reactor-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client for Reactor server APIs"

[dependencies]
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"

reactor-deploy-bundle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
