[package]
name = "reactor-connect-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactor Connect Server — standalone binary for connector operations"

[[bin]]
name = "reactor-connect-server"
path = "src/main.rs"

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-auth.workspace = true
reactor-cache.workspace = true
reactor-vault.workspace = true
reactor-connect.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true

# Error handling
anyhow.workspace = true

# Database
sqlx.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client
reqwest.workspace = true

# Config
figment.workspace = true
dotenvy.workspace = true
