[package]
name = "reactor-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and contracts for Reactor.cloud"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# IDs and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Async
async-trait.workspace = true
tokio = { workspace = true, features = ["sync"] }

# URL handling
url.workspace = true

# Hashing (blake3 for ProjectRef)
blake3.workspace = true

# Encoding (base32 for ProjectRef)
data-encoding.workspace = true

# Base64 encoding
base64.workspace = true

# Bytes
bytes.workspace = true

# NATS messaging (optional, for multi-tenant mode)
async-nats = { workspace = true, optional = true }

# Tracing (for NATS logging)
tracing = { workspace = true, optional = true }

[features]
default = []
nats = ["dep:async-nats", "dep:tracing"]
