[package]
name = "reactor-data"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactor Data capability — PostgREST-shaped HTTP surface with Rust-owned policy engine"

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-policy.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# IDs and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Observability
tracing.workspace = true

# Async utilities
async-trait.workspace = true

# SQL parsing
sqlparser.workspace = true
nom.workspace = true
indexmap.workspace = true
itertools.workspace = true
futures.workspace = true

# Validation
validator.workspace = true

# Encoding
base64.workspace = true
sha2.workspace = true
hex.workspace = true

# Bytes
bytes.workspace = true

# OpenAPI
utoipa.workspace = true

# NATS (optional, for multi-tenant realtime)
async-nats = { workspace = true, optional = true }

[features]
default = []
nats = ["dep:async-nats"]

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reactor-auth.workspace = true
url.workspace = true
tracing-subscriber.workspace = true
