[package]
name = "reactor-functions-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactor Functions server binary"

[[bin]]
name = "reactor-functions-server"
path = "src/main.rs"

[features]
default = ["runtime-wasm", "runtime-bun"]
runtime-wasm = ["reactor-functions/runtime-wasm"]
runtime-bun = ["reactor-functions/runtime-bun"]
runtime-lambda = ["reactor-functions/runtime-lambda"]

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-functions.workspace = true
reactor-auth.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Error handling
anyhow.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# HTTP client (for RemoteAuthClient)
reqwest.workspace = true

# Config
figment.workspace = true
