[package]
name = "reactor-functions"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Reactor Functions capability — sandboxed HTTP handlers with wasm/bun/lambda runtimes"

[features]
default = ["runtime-wasm", "runtime-bun"]
runtime-wasm = ["wasmtime", "wasmtime-wasi", "wasmtime-wasi-http"]
runtime-bun = ["nix"]
runtime-lambda = ["aws-sdk-lambda", "aws-config"]

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-policy.workspace = true
reactor-storage.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum = { workspace = true, features = ["multipart"] }
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# IDs and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Observability
tracing.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# Byte buffers
bytes.workspace = true

# Tokio utilities
tokio-util.workspace = true

# Regex and lazy init
once_cell.workspace = true
regex.workspace = true

# Validation
validator.workspace = true

# Crypto (for bundle verification and secrets encryption)
base64.workspace = true
sha2.workspace = true
hex.workspace = true
aes-gcm.workspace = true
rand.workspace = true

# Config
figment.workspace = true

# HTTP client (for RemoteAuthClient and storage client)
url.workspace = true
reqwest.workspace = true

# Zip handling
zip.workspace = true

# WASM runtime (optional)
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }
wasmtime-wasi-http = { workspace = true, optional = true }

# Unix process management (optional, for bun runtime)
nix = { workspace = true, optional = true }

# AWS Lambda SDK (optional)
aws-sdk-lambda = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# OpenAPI
utoipa.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
reactor-auth.workspace = true
tracing-subscriber.workspace = true
