[package]
name = "reactor-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Edge gateway routing and Caddy integration for Reactor"

[features]
default = ["postgres"]
postgres = ["sqlx"]

[dependencies]
# Workspace crates
reactor-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# HTTP client (for Caddy admin API)
reqwest = { workspace = true, features = ["json"] }

# PostgreSQL (optional)
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"], optional = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
