[package]
name = "reactor-ops"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operations control surface for Reactor platform operators"

[dependencies]
# Workspace crates
reactor-core.workspace = true
reactor-auth = { workspace = true }

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# IDs and time
uuid.workspace = true
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Observability
tracing.workspace = true

# Async utilities
async-trait.workspace = true

# OpenAPI
utoipa.workspace = true

# IP address parsing
ipnetwork = "0.20"
